some content's alignment modified and working process responsive issue fixed in small device

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4365,7 +4365,7 @@ textarea {
   transform: translateY(-50%);
 }
 .td-hero-5-bottom-thumb {
-  height: 640px;
+  height: 640px !important;
   overflow: hidden;
   overflow: hidden;
   position: relative;
@@ -4373,15 +4373,15 @@ textarea {
 }
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 576px) and (max-width: 767px) {
   .td-hero-5-bottom-thumb {
-    height: 440px;
+    height: 440px !important; 
   }
 }
 @media (max-width: 575px) {
   .td-hero-5-bottom-thumb {
-    height: 300px;
+    height: 285px !important;
   }
   .td-hero-5-bottom-thumb img {
-    height: 400px;
+    height: 400px !important;
     object-fit: cover;
   }
 }
@@ -5855,7 +5855,7 @@ textarea {
 @media only screen and (min-width: 768px) and (max-width:1024px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
   .td-process-title {
     width: auto;
-    padding: 0px 0px 30px 0px;
+    padding: 0px 0px 15px 0px;
     border: none;
   }
 }
